# python-template

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.windsurf/workflows/: refine.md
docs/: architecture.md
src/{{package_name}}/: __init__.py  main.py
src/{{package_name}}/scripts/: dev.py
tools/: setup_template.py  template_export.py
